# entropy

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  TaskFile.yml  demo.yml  main.py  pyproject.toml
demo/: demo.py
entropy/: __init__.py  colors.py  compat.py  config.py  constants.py  control.py  display.py  game.py  locations.py  logger.py  logging.py  mixer.py  platform.py  translator.py  utils.py
entropy/assets/fonts/: LanaPixel_OpenFontLicense.txt
entropy/assets_library/: __init__.py  assets_collection.py  cache.py  font.py  image.py  sound.py  voice.py
entropy/commands/: base.py  display.py  game.py  locale.py  mixer.py  sound.py  state.py  voice.py
entropy/components/: __init__.py  background.py  base.py  button.py  fps.py  group.py  main_menu.py  menu.py  text.py
entropy/event/: event.py  events.py  handler.py  specs.py
entropy/event/types/: input.py  inputs.py  pgmouse.py  system.py
entropy/events/: events.py  keys.py
entropy/game/: control.py  entity.py  object.py
entropy/game/states/: __init__.py  base.py  settings_menu.py  splash.py  story.py  title_screen.py
entropy/game/story/: chapter.py
entropy/gui/: monitor.py  mouse.py  window.py
entropy/gui/component/: background.py  base.py  button.py  menu.py  text.py  utils.py
entropy/gui/components/: background.py  base.py  button.py  fps.py  menu.py  slider.py  text.py  widget.py
entropy/gui/elements/: background.py  base.py  button.py  fps.py  menu.py  slider.py  text.py  utils.py
entropy/gui/input/: __init__.py  base.py  (+4 more)
entropy/misc/: action.py  assets.py  config.py  control.py  game.py  loader.py  monitor.py  mouse.py  rect.py  rescaler.py  resolution.py  scale.py  translator.py  window.py
entropy/states/: __init__.py  base.py  menu.py  overlay_menu.py  settings_menu.py  splash.py  title_screen.py
entropy/tools/: observer.py  specification.py  timer.py
entropy/utils/: display.py  measure.py  pygame.py
scripts/: build-story.py  build_story.py  install-task.sh
story/: main.json
story/chapter-01/: scene-01.json
story/chapter01/: scene00.yaml  scene01.json  scene01.yaml  scene02.json  scene02.yaml
tests/commands/: test_commands.py
tests/scripts/: conftest.py  test_build_story.py
tests/tools/: test_specification.py
(+54 files in other folders)
