[tool.poetry]
name = "entropy"
version = "0.1.0"
description = ""
authors = ["u8slvn <u8slvn@gmail.com>"]
license = "LGPL-2.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
combine_as_imports = true
lines_after_imports = 2
src_paths = ["entropy", "demo"]
