[tool.poetry]
name = "entropy"
version = "0.1.0"
description = ""
authors = ["u8slvn <u8slvn@gmail.com>"]
license = "LGPL-2.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame-ce = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 88

[tool.ruff]
fix = true
line-length = 88
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "RUF", # ruff checks
    "TID", # flake8-tidy-imports
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
required-imports = [
    "from __future__ import annotations",
]

[tool.mypy]
files = "entropy"
mypy_path = "entropy"
